--- a/app/views/urls/index.html.erb
+++ b/app/views/urls/index.html.erb
@@ -2,9 +2,14 @@
 <% @urls.each do |url| %>
   <p>
     <%#= link_to url.short_url_id, url_path(id: url.short_url_id) %> #<%#= url.original_url %>
-    <%= link_to url.short_url,url.original_url %>--> <%= url.original_url %>    
+
+
+    click_count:<%= url.click_count %>
+    <%= link_to url.short_url, add_click_count_url_path(url.id), method: 'post' %>
+    
+    --> <%= url.original_url %>    
     <%= link_to 'edit',edit_url_path(url.id) %>
-    <%= link_to 'delete', url_path(url.id), method: :delete %>
+    <%= link_to 'delete', url_path(url.id), method: :delete%>
   </p>
 <% end %>
 
