--- a/app/views/urls/index.html.erb
+++ b/app/views/urls/index.html.erb
@@ -1,12 +1,8 @@
 <h1>Url Shortener</h1>
-<% @urls.each do |url| %>
+<% @urls.each_with_index do |url, index| %>
   <p>
-    <%#= link_to url.short_url_id, url_path(id: url.short_url_id) %> #<%#= url.original_url %>
-
-
-    click_count:<%= url.click_count %>
-    <%= link_to url.short_url, add_click_count_url_path(url.id), method: 'post' %>
-    
+    <%= index+1%> click_count:<%= url.click_count %>
+    <%= link_to url.short_url, add_click_count_url_path(url.id), method: 'post' %>    
     --> <%= url.original_url %>    
     <%= link_to 'edit',edit_url_path(url.id) %>
     <%= link_to 'delete', url_path(url.id), method: :delete%>
